# simpleAgentV3

./: .coverage  .gitignore  Dockerfile  README.en.md  README.md  main.py  pyproject.toml  requirements.txt
agentcore/: __init__.py  app.py  mcp.py
agentcore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentcore/adapters/: __init__.py  agent.py  builder.py  cli.py  decorators.py  skill.py
agentcore/contrib/http_server/: __init__.py  health_server.py
agentcore/core/: interfaces.py  orchestrator.py  parser.py  tool_manager.py
agentcore/examples/: code_review_skill.py  quick_start.py
agentcore/resources/: config.yaml
agentcore/runtime/: broadcaster.py  checkpointer.py  runner.py  waiter.py
agentcore/services/llm/: http_client.py  openai_sdk.py
agentcore/services/logger/: __init__.py  file_logger.py
agentcore/services/memory/: __init__.py  redis_memory.py  sliding_window.py
agentcore/services/tools/: __init__.py  calculator_tool.py  datetime_tool.py
agentcore/services/tools/input/: __init__.py  glob_tool.py  grep_search_tool.py  read_file_tool.py  web_fetch_tool.py  web_search_tool.py
agentcore/services/tools/output/: __init__.py  _confirm.py  edit_file_tool.py  (+2 more)
agentcore/tests/chaos/: test_timeout_cancel.py
agentcore/tests/integration/: test_orchestrator.py
agentcore/tests/unit/: test_broadcaster.py  test_checkpointer.py  test_decorators.py  test_memory.py  test_parser.py  test_tool_manager.py  test_tools.py  test_waiter.py
logs/: agentcore.jsonl
resources/: config.yaml
tools/: tools.py
